hphp/test/zend/bad/Zend/tests/generators/errors/yield_non_ref_function_call_by_ref_error.php
<?php

function foo() {
    return "bar";
}

function &gen() {
    yield foo();
}

$gen = gen();
var_dump($gen->current());

?>